# AreYouTheOneCalculator

./: .gitignore  Cargo.toml  LICENSE  README.md  are_you_the_one_calculator.py  ayto_calculator.py  ayto_client.py  ayto_functions.py  ayto_server.py  calculation_data_handler.py  config.json  docker-compose.yml  matching_night_calculator.py  matching_night_simulation.py  rest_communication.py  rest_service.py  rrun  run_calculator.sh  settings.json
data/: 2021-1.json  2021-2.json  2021-3.json  vipSeason2-2022.json
data/season1-2020/: mn1.json  mn10.json  mn2.json  mn3.json  mn4.json  mn5.json  mn7.json  mn8.json  mn9.json
data/season2-2021/: mn1.json  mn10.json  mn2.json  mn3.json  mn5.json  mn6.json  mn7.json  mn8.json  mn9.json
data/season3-2021/: mn1.json  mn10.json  mn2.json  mn3.json  mn4.json  mn5.json  mn7.json  mn8.json  mn9.json
data/season4-2022/: test.json
data/test/: test1.json  test2.json  test3.json
data/vipSeason1-2021/: mn1.json  mn10.json  mn2.json  mn3.json  mn4.json  mn5.json  mn6.json  mn7.json  mn8.json
data/vipSeason2-2022/: mn1.json  mn2.json  mn3.json  mn4.json  mn5.json  mn6.json  mn7.json  mn8.json
results/: Result_Table.ods
results/2021/: 2021-1_result_2021-12-19.txt  2021-1_result_2021-12-23.txt  2021-2_result_2021-12-19.txt  (+7 more)
src/: are_you_the_one_calculator.py  are_you_the_one_calculator.rs  ayto_client.py  ayto_functions.py  calculation_daemon.py  calculation_data_handler.py  calculator_process_handler.py  filehandler.rs  main.rs  matching_night_calculator.py  rest_service.py  result_data_handler.py
(+52 files in other folders)
